# brain-music-max

./: .gitmodules  CMakeLists.txt
docs/: bml.Input.maxref.xml  bml.upsample~.maxref.xml
source/projects/BML.tutorial/: BML.tutorial.cpp  BML.tutorial_test.cpp
source/projects/bml.Input/: bml.Input.cpp  bml.Input_test.cpp
source/projects/bml.upsample_tilde/: bml.upsample_tilde.cpp
